--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -10,8 +10,8 @@ on:
 
 env:
   MANIFEST: git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git
-  MANIFEST_BRANCH: twrp-5.1
-  DEVICE: Fire4Plus
+  MANIFEST_BRANCH: twrp-6.0
+  DEVICE: a50mgp_dug
   DT_LINK: https://github.com/HemanthJabalpuri/twrp_htc_a50mgp_dug
   DT_PATH: device/htc/a50mgp_dug
   TARGET: recoveryimage
@@ -34,7 +34,7 @@ jobs:
         sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
         sudo -E apt-get clean
         sudo -E apt-get -qq update
-        sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev repo rsync flex bison aria2 schedtool
+        sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev repo rsync flex bison aria2 schedtool gcc-multilib g++-multilib
         sudo curl --create-dirs -L -o /usr/local/bin/repo -O -L https://storage.googleapis.com/git-repo-downloads/repo
         sudo chmod a+rx /usr/local/bin/repo
 
